# propeller_design_tools

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
propeller_design_tools/: __init__.py  airfoil.py  custom_opengl_classes.py  foil_ui_classes.py  funcs.py  helper_ui_classes.py  helper_ui_subclasses.py  opt_ui_classes.py  prop_analysis_ui_classes.py  prop_creation_ui_classes.py  prop_sweep_ui_classes.py  prop_ui_classes.py  propeller.py  radialstation.py  settings.py  user_interface.py  user_settings.py
propeller_design_tools/foil_database/polar_database/: arad13_polar_data.txt  clarky_polar_data.txt  e855_polar_data.txt  mrc-16_polar_data.txt
propeller_design_tools/prop_database/MyPropeller/: MyPropeller.xrop  MyPropeller.xrr
propeller_design_tools/prop_database/MyPropeller/blade_profiles/: profile_0.txt  profile_1.txt  profile_10.txt  profile_11.txt  profile_12.txt  profile_13.txt  profile_14.txt  profile_15.txt  profile_16.txt  profile_17.txt  profile_18.txt  profile_19.txt  profile_2.txt  profile_20.txt  profile_21.txt  profile_22.txt  profile_23.txt  profile_24.txt  profile_25.txt  profile_26.txt  profile_27.txt  profile_28.txt  profile_29.txt  profile_3.txt  profile_30.txt  profile_31.txt  profile_32.txt  profile_33.txt  profile_34.txt  profile_35.txt  profile_36.txt  profile_37.txt  profile_38.txt  profile_39.txt  profile_4.txt  profile_40.txt  profile_41.txt  profile_42.txt  profile_43.txt  profile_44.txt  (+10 more)
propeller_design_tools/prop_database/MyPropeller2/: MyPropeller2.xrop  MyPropeller2.xrr
propeller_design_tools/supporting_files/: user-settings.txt
tests/: example1_airfoil_analysis.py  example3_prop_creation.py  example4_stl_generation.py  example5_prop_analysis.py  scratch_tester.py
(+51 files in other folders)
