[metadata]
name = propeller_design_tools
version = 0.1.19
author = Jacob Bronson
author_email = jakebronson89@gmail.com
description = Tools, for propeller design (automates usage of XFOIL and XROTOR executables).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/helloDestroyerOfWorlds/propeller_design_tools.git
project_urls =
    Bug Tracker = https://github.com/helloDestroyerOfWorlds/propeller_design_tools/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.6
include_package_data = true

[options.package_data]
* = propeller_design_tools/supporting_files/*.png
* = propeller_design_tools/supporting_files/*.txt
* = propeller_design_tools/foil_database/*.dat
* = propeller_design_tools/foil_database/*.exe

* = propeller_design_tools/prop_database/MyPropeller/blade_profiles/*.txt
* = propeller_design_tools/prop_database/MyPropeller/*.meta
* = propeller_design_tools/prop_database/MyPropeller/*.xrop
* = propeller_design_tools/prop_database/MyPropeller/*.xrr

* = propeller_design_tools/prop_database/MyPropeller2/blade_profiles/*.txt
* = propeller_design_tools/prop_database/MyPropeller2/*.meta
* = propeller_design_tools/prop_database/MyPropeller2/*.xrop
* = propeller_design_tools/prop_database/MyPropeller2/*.xrr

* = propeller_design_tools/prop_database/*.exe

[options.packages.find]
